# railway-dot-exe

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  application.cxx  conanfile.txt
.github/workflows/: railway_op_sim.yaml
include/railos/: actions.hxx  containers.hxx  globals.hxx  logging.hxx  positioning.hxx  read_write.hxx  text.hxx  timetable.hxx  track.hxx  train.hxx  train_controller.hxx  utilities.hxx
include/railos/ui/: buttons.hxx
src/: dummy.cxx  globals.cxx  text.cxx  track.cxx  train_controller.cxx  utilities.cxx
src/core/: read_write.cxx  text.cxx  track.cxx  train.cxx  utilities.cxx
src/ui/: buttons.cxx
